--- a/res/layout/my_fuwu.xml
+++ b/res/layout/my_fuwu.xml
@@ -99,10 +99,10 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btok"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bt_light_red"
+        android:background="@drawable/btn_red"
         android:text="保存"
         android:textColor="@color/white" />
 
