--- a/res/layout/my_yirenwork_item.xml
+++ b/res/layout/my_yirenwork_item.xml
@@ -35,7 +35,7 @@
                 android:textSize="13dp" />
 
             <TextView
-                android:id="@+id/tvonlinetime"
+                android:id="@+id/tvstatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
@@ -49,6 +49,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lneirong"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/spilt_line_color"
