--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -29,7 +29,8 @@
 	<color name = "main_white">#ededed</color> <!-- 背景 白 -->
 	<color name = "main_red">#FF494B</color> <!-- 背景  浅红 -->
 	  <color name = "main_light_white">#F6F6F6</color> <!-- 浅白 -->
-	
+	<color name = "main_huangbai">#F5F6EB</color> <!-- 黄白 -->
+	<color name = "main_light_huangbai">#FEFFFA</color> <!-- 浅黄白 -->
 	<!-- 按钮颜色 -->
 	<color name = "bt_green">#2ac600</color> <!-- 按钮 浅绿 -->
 	<color name = "bt_red">#ff9293</color> <!-- 按钮 粉红 -->
