--- a/res/layout/my_age.xml
+++ b/res/layout/my_age.xml
@@ -9,55 +9,77 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="93"
-        android:background="@color/bggray"
+        android:background="@color/main_huangbai"
         android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="10dp"
             android:layout_weight="1"
             android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp" >
+                android:layout_marginTop="20dp"
+                android:background="@color/main_light_huangbai"
+                android:gravity="center_vertical" >
 
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="年龄" />
+                    android:layout_margin="20dp"
+                    android:text="年龄"
+                    android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                 <TextView
                     android:id="@+id/editText1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_margin="20dp"
                     android:layout_weight="1"
-                    android:text="12岁" />
+                    android:gravity="right"
+                    android:text="12岁"
+                    android:textSize="@dimen/new_size_3" 
+                    android:textColor="@color/color_4" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="30dp"
+                android:background="@color/spilt_line_color" >
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp" >
+                android:gravity="center_vertical"
+                android:background="@color/main_light_huangbai" >
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="星座" />
+                    android:layout_margin="20dp"
+                    android:text="星座"
+                    android:textSize="@dimen/new_size_3" 
+                    android:textColor="@color/color_2" />
 
                 <TextView
                     android:id="@+id/editText2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_margin="20dp"
                     android:layout_weight="1"
-                    android:text="天秤座" >
+                    android:gravity="right"
+                    android:text="天秤座"
+                    android:textSize="@dimen/new_size_3" 
+                    android:textColor="@color/color_4" >
 
                 </TextView>
             </LinearLayout>
@@ -66,23 +88,27 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="10dp"
                 android:text="输入你的出生日期，系统会自动算出年龄和星座。你的出生日期将不会出现在个人资料里。"
-                android:textColor="@color/color_3" />
+                android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_3" />
 
             <DatePicker
                 android:id="@+id/datePicker1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:calendarViewShown="false" />
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/btchongzhi"
+            android:id="@+id/btok"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bt_light_red"
+            android:background="@drawable/btn_red"
             android:text="确定"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
