--- a/res/layout/my_tixian.xml
+++ b/res/layout/my_tixian.xml
@@ -111,13 +111,13 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btchongzhi"
+            android:id="@+id/bttixian"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/my_btgreen"
+            android:background="@drawable/btn_green"
             android:text="确定"
             android:textColor="@color/white"
             android:textSize="@dimen/new_size_4" />
