--- a/res/layout/my_work.xml
+++ b/res/layout/my_work.xml
@@ -47,4 +47,10 @@
     android:layout_height="wrap_content" >
 </ListView>
 
+<ListView
+    android:id="@+id/lyaoqing"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+</ListView>
+
 </LinearLayout>
