--- a/res/layout/my_xingtanziliao.xml
+++ b/res/layout/my_xingtanziliao.xml
@@ -16,7 +16,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bt_green"
+        android:background="@drawable/btn_green"
         android:textColor="@color/white"
         android:text="保存资料" />
 </LinearLayout>
