--- a/res/layout/user_fragment.xml
+++ b/res/layout/user_fragment.xml
@@ -11,98 +11,113 @@
         android:background="@color/bggray"
         android:orientation="vertical" >
 
-        <LinearLayout
-            android:id="@+id/lmydongtai"
+        <ScrollView
+            android:id="@+id/scrollView1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center_vertical" >
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="15"
-                android:src="@drawable/m23_06" />
+            android:layout_height="wrap_content" >
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="80"
-                android:gravity="center_vertical"
                 android:orientation="vertical" >
 
                 <LinearLayout
+                    android:id="@+id/lmydongtai"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageView1"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="乱世飞尘"
-                        android:textColor="@color/black" />
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="15"
+                        android:src="@drawable/m23_06" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="80"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical" >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical" >
+
+                            <TextView
+                                android:id="@+id/textView1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="乱世飞尘"
+                                android:textColor="@color/color_2" />
+
+                            <ImageView
+                                android:id="@+id/imageView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:src="@drawable/f3_13" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical" >
+
+                            <ImageView
+                                android:id="@+id/imageView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="5dp"
+                                android:src="@drawable/m19_06" />
+
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="星币余额" />
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:text="56" />
+                        </LinearLayout>
+                    </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/imageView4"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/f3_13" />
-
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="5"
+                        android:src="@drawable/m19_03" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical" >
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/m19_06" />
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="星币余额" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="56" />
-
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
                 </LinearLayout>
-            </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="5"
-                android:src="@drawable/m19_03" />
-
-        </LinearLayout>
-
-        <LinearLayout
+<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="11dp"
-            android:background="@color/white" >
+            android:layout_marginBottom="15dp"
+            android:background="@color/main_light_white" >
 
             <LinearLayout
                 android:id="@+id/lmyhaoyou"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical" >
@@ -124,6 +139,8 @@
                 android:id="@+id/lmytuijian"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical" >
@@ -145,6 +162,8 @@
                 android:id="@+id/lmyguanzhu"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical" >
@@ -166,6 +185,8 @@
                 android:id="@+id/lmyfans"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical" >
@@ -183,22 +204,11 @@
                     android:text="粉丝" />
             </LinearLayout>
         </LinearLayout>
-
-        <ScrollView
-            android:id="@+id/scrollView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" >
-
                 <LinearLayout
                     android:id="@+id/lmyqianbao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <ImageView
@@ -236,7 +246,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:background="@color/white"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <ImageView
@@ -272,8 +282,8 @@
                     android:id="@+id/lmyfuwu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/white"
+                    android:layout_marginBottom="15dp"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <ImageView
@@ -309,17 +319,17 @@
                     android:id="@+id/lheimingdan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/white"
+                    android:layout_marginBottom="17dp"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -345,16 +355,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:layout_marginBottom="1dp"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -381,16 +392,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:background="@color/white"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -417,16 +428,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:background="@color/white"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -453,16 +464,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
-                    android:background="@color/white"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -488,16 +499,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:layout_marginBottom="1dp"
+                    android:background="@color/main_light_white"
                     android:gravity="center_vertical" >
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="25dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         android:layout_weight="8"
                         android:orientation="vertical" >
                     </LinearLayout>
@@ -526,7 +538,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="5"
-                    android:background="@color/white" >
+                    android:background="@color/main_light_white" >
                 </LinearLayout>
     </LinearLayout>
 
